<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="wenjianchangducuowu">Program Error</string>
    <string name="app_name">Brain</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rest">Rest</string>
    <string name="programming">Programming</string>
    <string name="telecontrol">Telecontrol</string>
    <string name="soul">Soul</string>
    <string name="delete">Delete page</string>
    <string name="determine">OK</string>
    <string name="cancel">Cancel</string>
    <string name="record_page">Recorder</string>
    <string name="ls_record">Recording</string>
    <string name="record_success">Done</string>
    <string name="record_play">Playing</string>
    <string name="record_play_success">Recording play completed!</string>
    <string name="xiazaishibai">Download Failed</string>
    <string name="xiazaichenggong">Download Completed</string>
    <string name="anzhuangchenggong">Installation successful!</string>
    <string name="tishi">Prompt</string>
    <string name="shezhibrain">Enter Settings -> About -> Turn off Parents mode.</string>
    <string name="wifi_stop">Is the router connection to be disconnected and create hotspot?</string>
    <string name="shi">Yes</string>
    <string name="fou">No</string>
    <string name="queren">OK</string>
    <string name="luyin">Record</string>
    <string name="zhaopian">Photo</string>
    <string name="huanjingcaiji">Environment Collection</string>
    <string name="shifouhuanjingcaiji">Whether to collect environment variables again?</string>
    <string name="huanjingcaiji_duizhunheixian">Put all grayscale sensors aim for line,press ”Yes” to collect line data</string>
    <string name="huanjingcaiji_duizhunbaise">Put all grayscale sensors aim for background,press ”Yes” to collect background data</string>
    <string name="huiduzhi">Grayscale value</string>
    <string name="pinghengche">Balance-car</string>
    <string name="pinghengchezhengzai">Balance-car is adjusting the balance...</string>
    <string name="pinghengchenggong">Success</string>
    <string name="pinghengshibai">Failure</string>
    <string name="shexiangtou">Camera</string>
    <string name="shexiangtoushifouchahao">Please check whether the camera is connected successfully?</string>
    <string name="shexiangtouzhengzai">Opening camera...</string>
    <string name="zhinanzhenjiaozhun">Calibrate Compass</string>
    <string name="zhinanzhenbazi">Please rotate the robot,then calibrate the compass!</string>
    <string name="zhinanzhenxuanzhuan">The robot will turn around and calibrates the compass!</string>
    <string name="zhinanzhenwancheng">Is Compass calibration done?</string>
    <string name="shengjigujian">Upgrade Firmware</string>
    <string name="shengjigujian_stm32">Upgrade the lastest Firmware STM32</string>
    <string name="m_robot_blocked">I get stuck, place me somewhere else</string>
    <string name="back">Back</string>
    <string name="wu_luyin">No Recording</string>
    <string name="wu_zhaopian">No Photo</string>
    <string name="wu_skillplay">No Skill</string>
    <string name="skill_play">Skill</string>
    <string name="duomeiti">Media</string>
    <string name="activate">Activate</string>
    <string name="protect">Protect</string>
    <string name="guoda">Data is too large to display</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="groupcontrol">GroupControl</string>
    <string name="reset">Reset</string>
    <string name="Group_ID_Set">Group ID Set</string>
    <string name="groupID">Group ID</string>
    <string name="confirm_group">Please confirm group ID</string>
    <string name="robot_motor">Robot Motor</string>

    <!--我叫奥科流思2.0  一级页面-->
    <string name="future_science">future_science</string>
    <string name="future_cool">future_cool</string>
    <string name="future_communication">future_communication</string>
    <string name="ability_training">ability_training</string>
    <string name="akls">akls</string>

    <!--我叫奥科流思2.0  二级页面-->
    <string name="m_myfamily">m_myfamily</string>
    <string name="m_findfruit">m_findfruit</string>
    <string name="m_findstationery">m_findstationery</string>

    <!--我叫奥科流思2.0 能力训练营 二级页面-->
    <string name="m_training_instruction_learing">instruction_learing</string>

</resources>