<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/groupcontrol"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66999999"
        android:drawableLeft="@drawable/dialog_title_default_icon"
        android:drawablePadding="3dp"
        android:padding="5dp"
        android:text="@string/Group_ID_Set"
        android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/pwd_init_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:selectAllOnFocus="true"
                android:inputType="numberPassword"
                android:textSize="25sp"
                android:hint="@string/groupID" />
            <Button
                android:id="@+id/pwd_init_ok"
                android:background="@drawable/common_bt_ok_bg_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:textSize="25sp"
                android:text="@string/determine" />

        </LinearLayout>


        <EditText
            android:id="@+id/pwd_init_second"
            android:visibility="gone"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:hint="@string/confirm_group" />


    <Button
        android:id="@+id/pwd_init_cancel"
        android:background="@drawable/common_bt_cancel_bg_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/cancel" />
</LinearLayout>